# university

./: .gitignore  README.md
Algorithms and Data Structures/: README.md  compileAndRun.sh  create_and_open.sh
Algorithms and Data Structures/bazarek/: bazarek.cpp  example.in  test1.in
Algorithms and Data Structures/fab/: example.in  fab.cpp
Algorithms and Data Structures/inw/: inw.cpp  test1.in  test1.out
Algorithms and Data Structures/kapitan/: kapitan.cpp
Algorithms and Data Structures/kinwersje/: kinwersje.cpp
Algorithms and Data Structures/lex/: lex.cpp  test1.in  test2.in
Algorithms and Data Structures/malowanieAutostrady/: malowanieAutostrady.cpp  test1.in  test2.in
Algorithms and Data Structures/matryca/: matryca.cpp  test1.in  test2.in  test3.in  test4.in
Algorithms and Data Structures/mecze/: mecze.cpp  test1.in  test2.in
Algorithms and Data Structures/nas/: example.in  nas.cpp
Algorithms and Data Structures/nwp/: helper.txt  nwp.cpp
Computer Networks./task1/: CMakeLists.txt  board.cpp  board.h  constants.h  debug.cpp  debug.h  events.cpp  events.h  game_event_info.h  game_manager.cpp  game_manager.h  makefile  messages.cpp  messages.h  messages_manager.cpp  messages_manager.h  player.h  serializers.cpp  serializers.h  server.cpp  server.h  server_main.cpp  timers_manager.cpp  timers_manager.h  utils.cpp  utils.h  validators.cpp  validators.h  worm.cpp  worm.h
Languages and tools for programming I/: README.md
Object Oriented Programming/: README.md
Probability Theory and Statistics/: Lab02.ipynb  Lab03.ipynb  Lab04.ipynb  Lab05.ipynb
(+247 files in other folders)
